Fix webpages bugs

--- a/static/contact.html
+++ b/static/contact.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="topnav2">
 			<img src="images/logo.png" />
-			<a href="index.html" style="float:right">HOME</a>
+			<a href="index.html" style="float:right; margin-right:20px">HOME</a>
 		</div>
 
 		<div class="row">
