--- a/static/reset_password.html
+++ b/static/reset_password.html
@@ -18,7 +18,7 @@
 
 		<div class="row" style="margin:120px auto" align="center">
 			<div class="card">
-				<form action="/hello" method="post">
+				<form action="/forgot_password" method="post">
 					<fieldset align="left">
 						<h2>Recover your account</h2>
 
