--- a/static/login.html
+++ b/static/login.html
@@ -6,23 +6,6 @@
 		</title>
 		<link rel="stylesheet" href="css/styles.css"  />
 		<link rel="stylesheet" href="css/styles2.css" />
-		<script>
-			function login() {
-				var username = document.forms["loginForm"]["username"].value;
-				var password = document.forms["loginForm"]["password"].value;
-				var xhr = new XMLHttpRequest();
-				xhr.open("POST", "/login", true);
-				xhr.setRequestHeader('Content-Type', 'application/json');
-				xhr.onreadystatechange = function() { // Call a function when the state changes.
-					if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
-						console.log(xhr.responseText);
-
-						window.location.replace("account.html?username=" + username + "&token=" + xhr.responseText);
-					}
-				}
-				xhr.send(JSON.stringify({"username": username, "password": password}));
-			}
-		</script>
 	</head>
 
 	<body>
@@ -34,7 +17,7 @@
 
 		<div class="row" style="margin:120px auto" align="center">
 			<div class="card">
-				<form name="loginForm" method="post" action="/login">
+				<form name="loginForm" action="/login" method="post">
 					<fieldset align="left">
 						<h2>Login to your account</h2>
 						<br/>
