--- a/static/reset_password.html
+++ b/static/reset_password.html
@@ -21,14 +21,18 @@
 				<form action="/forgot_password" method="post">
 					<fieldset align="left">
 						<h2>Recover your account</h2>
-
+						<br/>
 						<label for="email"><b>Email</b></label>
 						<br/>
 						<input type="text" id="email" name="email" placeholder="Email" required>
 						<br/>
 
 						<input type="submit" name= "form" value="Submit"/>
-						<br/><br/><br/>
+						<br/>
+
+						<br/>
+						<a href="login.html"><h5>Go back</h5></a>
+						<br/>
 					</fieldset>
 				</form>
 			</div>
