--- a/static/signup.html
+++ b/static/signup.html
@@ -28,7 +28,7 @@
 						<br/>
 						<label for="password"><b>Password</b></label>
 						<br/>
-						<input type="text" id="password" name="password" placeholder="Password" required>
+						<input type="text" id="password" name="password" placeholder="Password (at least 6 characters)" required>
 						<br/>
 						<label for="email"><b>Email</b></label>
 						<br/>
@@ -44,7 +44,11 @@
 						<br/>
 
 						<input type="submit" name= "form" value="Signup"/>
-						<br/><br/><br/>
+						<br/>
+						
+						<br/>
+						<a href="login.html"><h5>Already have an account? Login</h5></a>
+						<br/>
 					</fieldset>
 				</form>
 			</div>
