--- a/static/login.html
+++ b/static/login.html
@@ -27,7 +27,7 @@
 						<br/>
 						<label for="password"><b>Password</b></label>
 						<br/>
-						<input type="text" id="password" name="password" placeholder="Password" required>
+						<input type="password" id="password" name="password" placeholder="Password" required>
 						<br/>
 
 						<input type="submit" name= "submit" value="Login"/>
