--- a/static/signup.html
+++ b/static/signup.html
@@ -28,7 +28,7 @@
 						<br/>
 						<label for="password"><b>Password</b></label>
 						<br/>
-						<input type="text" id="password" name="password" placeholder="Password (at least 6 characters)" required>
+						<input type="password" id="password" name="password" placeholder="Password (at least 6 characters)" required>
 						<br/>
 						<label for="email"><b>Email</b></label>
 						<br/>
