--- a/static/signup.html
+++ b/static/signup.html
@@ -43,6 +43,11 @@
 						<input type="text" id="familyname" name="familyname" placeholder="Last Name" required>
 						<br/>
 
+						<br/>
+						<a>By signing up you agree to our <b>Terms of Service</b> and <b>Privacy Policy</b> </a>
+						<br/>
+
+						<br/>
 						<input type="submit" name= "form" value="Signup"/>
 						<br/>
 						
