Add 'Historian' docker container for monitoring/saving of device transaction histories

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -56,6 +56,7 @@
     <script src="js/devices.js"></script>
     <script src="js/server.js"></script>
     <script src="js/user.js"></script>
+    <script src="js/histories.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
