Added env.js for the API URL

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -57,6 +57,7 @@
     <script src="js/server.js"></script>
     <script src="js/user.js"></script>
     <script src="js/histories.js"></script>
+    <script src="js/env.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
