implement new requirements
Encrypt username and password using JWT token
Add mobile number in signup
Add API for delete user
Add API for refreshing access token timeout
Replace given name and family name to name in signup
Update documentation

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -58,6 +58,8 @@
     <script src="js/user.js"></script>
     <script src="js/histories.js"></script>
     <script src="js/env.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+    <script src="js/token.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
