Improved Paypal payment implementation as per Sree's comments
- Added recording of paypal transactions with info necessary for querying detailed info from Paypal
- Removed SET SUBSCRIPTION api so not exposed to the web/mobile app
- Cleaned up unnecessary parameters

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -63,6 +63,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/1.1.1/angular-chart.min.js"></script>
     <script src="js/notifications.js"></script>
+    <script src="js/payments.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/4.15.0/lodash.min.js"></script>
     <script src="js/angular-simple-logger.js"></script>
     <script src="js/angular-google-maps.min.js"></script>
