Supported device groupings
- When user has several devices, grouping of devices is useful to organize the devices into ANY category: logical, geographical, same sensors, etc.
  It shall be useful in configuration of devices, updating firmware of devices, etc.

- Please refer to the new device group registration and management APIs
  GET DEVICE GROUPS
  ADD DEVICE GROUP
  DELETE DEVICE GROUP
  GET DEVICE GROUP
  UPDATE DEVICE GROUP NAME
  ADD DEVICE TO GROUP
  DELETE DEVICE FROM GROUP
  SET DEVICES IN DEVICE GROUP

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -68,6 +68,7 @@
     <script src="js/angular-simple-logger.js"></script>
     <script src="js/angular-google-maps.min.js"></script>
     <script src="js/googlemaps.init.js"></script>
+    <script src="js/devicegroups.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
