Supported org/tree charts for device-sensor hierarchy

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -69,6 +69,7 @@
     <script src="js/angular-google-maps.min.js"></script>
     <script src="js/googlemaps.init.js"></script>
     <script src="js/devicegroups.js"></script>
+    <script src="js/d3.v5.min.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
