--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -70,6 +70,7 @@
     <script src="js/googlemaps.init.js"></script>
     <script src="js/devicegroups.js"></script>
     <script src="js/d3.v5.min.js"></script>
+    <script src="js/organizations.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
