--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -51,6 +51,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/dashboards/dashboards.js"></script>
+    <script src="js/controllers/payment/payment.js"></script>
+    <script src="js/services/payment.service.js"></script>
+
 
     <script src="js/routes.js"></script>
     <script src="js/utils/date-time-util.js"></script>
@@ -74,6 +77,10 @@
     <script src="js/devicegroups.js"></script>
     <script src="js/d3.v5.min.js"></script>
     <script src="js/organizations.js"></script>
+
+    <script src="https://js.braintreegateway.com/web/dropin/1.22.1/js/dropin.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.62.1/js/data-collector.min.js"></script>
+    <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
