--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -48,7 +48,13 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+
     <script src="js/controllers/dashboards/dashboards.js"></script>
+    <script src="js/controllers/dashboards/compareChartSensors.js"></script>
+    <script src="js/controllers/dashboards/newChartGateway.js"></script>
+    <script src="js/controllers/dashboards/newChartSensor.js"></script>
+    <script src="js/controllers/dashboards/newDashboard.js"></script>
+
     <script src="js/controllers/payment/payment.js"></script>
     <script src="js/services/payment.service.js"></script>
     <script src="js/routes.js"></script>
