Big Refactor Frontend & removing query params "realtime" and "timespan"

--- a/webapp/src/ionicapp/www/index.html
+++ b/webapp/src/ionicapp/www/index.html
@@ -50,10 +50,14 @@
     <script src="js/controllers.js"></script>
 
     <script src="js/controllers/dashboards/dashboards.js"></script>
+    <script src="js/controllers/dashboards/dashboardDetail.js"></script>
+
     <script src="js/controllers/dashboards/compareChartSensors.js"></script>
     <script src="js/controllers/dashboards/newChartGateway.js"></script>
     <script src="js/controllers/dashboards/newChartSensor.js"></script>
     <script src="js/controllers/dashboards/newDashboard.js"></script>
+    <script src="js/controllers/dashboards/chartDetail.js"></script>
+
 
     <script src="js/controllers/payment/payment.js"></script>
     <script src="js/services/payment.service.js"></script>
